test/should_pass/basic_015.grg
actions basic_015;

rule r {
	pattern {
		x : Node;
		negative {
			x --> y : Node;
		}
	}
	modify {
		x --> y : Node;
	}
}

