test/should_fail/dangle_003.grg
actions dangle_003;

rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		x-e->;
	}
}
